src/main/resources/css/main_style.css
@font-face {
    font-family: 'VistolSans-Black';
    src: url('../fonts/vistol_sans_black.otf');
}

@font-face {
    font-family: 'NamKhoneUnicode';
    src: url('../fonts/NamKhoneUnicode.ttf');
}

.root {
    -fx-background-color: #222;
    -fx-key-color: #000;
    -fx-outcome-color: #9a6aff;
    -fx-outcome-miscolor: #d23417;
    -fx-title-color: #9a6aff;
    -fx-to-type-node-color: #9a6aff;
    -fx-text-color: #fff;
}

.text, .text-field {
    -fx-font-family: 'NamKhoneUnicode';
    -fx-font-size: 16;
}

.label {
    -fx-text-fill: -fx-text-color;
    -fx-font-size: 14;
}

#vbClose:hover {
    -fx-background-color: -fx-outcome-miscolor;
}

#vbClose:pressed {
    -fx-background-color: rgb(197, 29, 29);
}

#vbMinimize:hover, #vbTheme:hover {
    -fx-background-color: #7e44f8;
}

#vbMinimize:pressed, #vbTheme:pressed {
    -fx-background-color: #651ffa;
}


.key {
    -fx-border-color: #fff;
    -fx-border-width: 1;
    -fx-text-fill: #fff;
    -fx-background-color: -fx-key-color;
    -fx-border-radius: 5;
    -fx-background-radius: 5;
}

.outcome {
    -fx-text-fill: -fx-outcome-color;
    -fx-font-size: 25;
}

.outcome#lbMIST {
    -fx-text-fill: -fx-outcome-miscolor;
}


#view {
    -fx-background-color: #000;
    /*-fx-pref-height: 50;*/
    /*-fx-min-height: 50;*/
    /*-fx-max-height: 50;*/
    -fx-border-color: white;
    -fx-border-radius: 5;
    -fx-background-radius: 5;
    /*-fx-font-size: 20;*/
    -fx-text-fill: -fx-text-color;
}

#practice {
    -fx-background-color: #fffb;
    /*-fx-pref-height: 50;*/
    /*-fx-min-height: 50;*/
    /*-fx-max-height: 50;*/
    /*-fx-font-size: 20;*/
}

.button {
    -fx-background-color: -fx-key-color;
    -fx-text-fill: #fff;
    -fx-border-radius: 50;
    -fx-background-radius: 50;
    -fx-border-color: #FFF;
}

.button:hover {
    -fx-background-color: #111;
}


.button:pressed {
    -fx-background-color: #222;
}


.combo-box .text-field {

    -fx-border-color: null;
}

.combo-box .text {

    -fx-font-size: 20;
}

.combo-box {
    -fx-background-color: -fx-key-color;
    -fx-border-color: white;
    -fx-border-radius: 5;
    -fx-background-radius: 5;
}

.combo-box:hover {
    -fx-background-color: #111;
}

.combo-box:pressed {
    -fx-background-color: #222;
}


.combo-box .cell {
    -fx-text-fill: #FFF;
    -fx-alignment: center;
}

.combo-box#lessons .cell {
    -fx-alignment: left;
}

.combo-box-popup .list-view {
    -fx-background-color: -fx-key-color;
    -fx-border-color: white;
}

.combo-box-popup .list-view .list-cell {
    -fx-background-color: -fx-key-color;
    -fx-text-fill: #DDD;
}

.combo-box-popup .list-view .list-cell:hover {
    -fx-background-color: #333;
}

.combo-box-popup .list-view .list-cell:selected {
    -fx-text-fill: -fx-outcome-color;
    -fx-font-weight: bold;
}

.combo-box .arrow-button {
    -fx-padding: 0;
    -fx-opacity: 0;
}

/*.combo-box .scroll-bar {*/
/*    -fx-opacity: 0;*/
/*}*/

.combo-box .scroll-bar {
    -fx-background-color: #111;
}


#title {
    -fx-background-color: -fx-title-color;
    -fx-font-size: 24;
    -fx-font-family: 'VistolSans-Black';
}


.key-label {
    -fx-text-fill: #fff;
}

#key-node-to-type {
    -fx-background-color: -fx-to-type-node-color;
}


#key-node-default {

    -fx-background-color: -fx-key-color;
}

